# web-search-mcp-rust

./: .dockerignore  AGENTS.md  Cargo.toml  LICENSE  README.md  USAGE.md  build.sh
docs/: SPECS.md  testing.md
refs/: REFERENCES.md
src/: lib.rs  main.rs  models.rs  reader.rs  research.rs  search.rs  server.rs  user_agent.rs
tests/: README.md  launch_server.sh  mcp.test.ts  package-lock.json  package.json  test_bot_detection.rs  test_logging.rs  test_mockito.rs  test_reader.rs  test_research.rs  test_search.rs
