[package]
name = "web-search-mcp-rust"
version = "0.1.6"
edition = "2021"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-worker"] }
rmcp-macros = "1.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
async-trait = "0.1"
rand = "0.8"
html2text = "0.6"
readability = "0.3.0"
scraper = "0.19"
axum = { version = "0.7", features = ["macros"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
socket2 = "0.5"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
schemars = "1.2.1"
toml = "0.8"

[dev-dependencies]
mockito = "1.7.2"
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
lto = true
# "fat" LTO. Max optimization, slowest link.

